[gd_scene load_steps=26 format=2]

[ext_resource path="res://Object/Leco/Leco.gd" type="Script" id=1]
[ext_resource path="res://Object/Leco/char1_Leco.png" type="Texture" id=2]
[ext_resource path="res://Object/Leco/shadow.png" type="Texture" id=3]
[ext_resource path="res://Object/Leco/life_bar.gd" type="Script" id=4]
[ext_resource path="res://font/phantivia-font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Object/Leco/RemoteTransform2D.gd" type="Script" id=6]
[ext_resource path="res://Object/Blue_Snow/pixel.png" type="Texture" id=7]
[ext_resource path="res://Object/tea_cup/pixel.png" type="Texture" id=8]
[ext_resource path="res://Object/GUI/mouse2D.gd" type="Script" id=9]
[ext_resource path="res://Object/Blue_Snow/biscuit.png" type="Texture" id=10]
[ext_resource path="res://Object/NuruNuru/bullet/warning.png" type="Texture" id=11]
[ext_resource path="res://Object/GUI/mouse2D.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]
size = 43
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.6022, 4.81722 )

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("hero_sprite/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 2.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 15.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("weapon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hero_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.13, 0.16, 0.25, 13, 14.7, 14.8, 14.9, 14.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1.03527, 1, 2.46229, 1.68179, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 60, -168 ), Vector2( 100, -200 ), Vector2( 140, -168 ), Vector2( 200, 0 ), Vector2( 200, 0 ), Vector2( 0, -200 ), Vector2( 0, 0 ), Vector2( 0, -100 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("hero_sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.001, 0.002, 0.00707522, 0.252576, 14.7009 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1.8025, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.22, 0.22, 0.22, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("hero_sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.236363, 14.6179, 15 ),
"transitions": PoolRealArray( 1, 1.86607, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0, 0.0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.31, 15 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "lose_check"
}, {
"args": [  ],
"method": "realive"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("shadow:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.16415e-10, 0.25, 12.99, 14.68 ),
"transitions": PoolRealArray( 1, 1, 2.46229, 1 ),
"update": 0,
"values": [ Vector2( -8.18948, 64.571 ), Vector2( 192, 64.571 ), Vector2( 192, 64.571 ), Vector2( -8, 64.571 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("shadow:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.13, 0.25, 12.95, 14.71, 14.8, 14.91, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.1, 0.1 ), Vector2( 0.2, 0.2 ), Vector2( 0.2, 0.2 ), Vector2( 0.1, 0.1 ), Vector2( 0.2, 0.2 ), Vector2( 0.13, 0.13 ), Vector2( 0.2, 0.2 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.04, 0.25, 14.98 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=5]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 0.840897, 0.812252, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.87 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hero_sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 0.840896, 0.812252, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.445435, 8.44264 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.6, 3 ),
"transitions": PoolRealArray( 0.732043, 1.7411, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 24 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("hero_sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.15, 0.15 ), Vector2( 0.2, 0.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 23.9968 ), Vector2( 0, -30 ), Vector2( 0, 20.9568 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=11]
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 77, 55 )
states/run/node = SubResource( 8 )
states/run/position = Vector2( 364, 131 )
transitions = [ "idle", "run", SubResource( 9 ), "run", "idle", SubResource( 10 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[sub_resource type="Animation" id=13]
resource_name = "warning"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="hero_sprite" type="Sprite" parent="."]
light_mask = 257
position = Vector2( 0.403034, 7.63898 )
scale = Vector2( 1, 0.882375 )
texture = ExtResource( 2 )

[node name="name_label" type="Label" parent="hero_sprite"]
anchor_left = 0.496
anchor_right = 0.496
margin_left = -226.451
margin_top = -181.199
margin_right = 52.5491
margin_bottom = -58.1992
rect_scale = Vector2( 1.18299, 1.34238 )
rect_pivot_offset = Vector2( 115.176, 99.6312 )
custom_fonts/font = SubResource( 1 )
text = "PHANTIVIA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life_bar" type="Node2D" parent="hero_sprite"]
position = Vector2( -23.1188, -40.3232 )
scale = Vector2( 0.9, 0.3 )
z_index = -1
script = ExtResource( 4 )

[node name="blank_bar" type="Sprite" parent="hero_sprite/life_bar"]
position = Vector2( 15.7595, -168.12 )
scale = Vector2( 310.362, 59.6193 )
texture = ExtResource( 7 )

[node name="red_bar" type="Sprite" parent="hero_sprite/life_bar"]
modulate = Color( 0.25, 0.95, 1, 1 )
position = Vector2( -134.09, -168.56 )
scale = Vector2( 300, 50 )
z_index = 1
texture = ExtResource( 7 )
offset = Vector2( 0.4995, 0.00880623 )

[node name="Light2D" type="Light2D" parent="hero_sprite"]
position = Vector2( -0.920984, 71.4529 )
rotation = -0.00680743
scale = Vector2( 3.14531, 2.78857 )
texture = ExtResource( 8 )
offset = Vector2( -0.980623, -24.8964 )
texture_scale = 50.0
energy = 0.0
range_item_cull_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.71095, 64.955 )
scale = Vector2( 3.76, 1 )
shape = SubResource( 2 )

[node name="camera" type="Camera2D" parent="."]
visible = false
position = Vector2( 521.845, -43.8406 )
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_left = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 3.0

[node name="damage_shine" type="AnimationPlayer" parent="."]
anims/shine = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( -8.18948, 64.571 )
scale = Vector2( 0.2, 0.2 )
z_index = -1
texture = ExtResource( 3 )

[node name="weapon" type="Node2D" parent="."]
show_behind_parent = true
position = Vector2( 0, 22.3896 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="weapon"]
position = Vector2( -79.6769, 8.32443 )
scale = Vector2( 0.9, 0.9 )
remote_path = NodePath("../../Shield")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2( 521.845, -43.8406 )
remote_path = NodePath("../camera")
script = ExtResource( 6 )

[node name="Shield" type="Sprite" parent="."]
visible = false
position = Vector2( -79.6769, 30.7141 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 10 )

[node name="warning" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.914133 )
position = Vector2( 0, -234.142 )
texture = ExtResource( 11 )

[node name="warning" type="AnimationPlayer" parent="warning"]
autoplay = "warning"
anims/warning = SubResource( 13 )

[node name="Node2D" parent="." instance=ExtResource( 12 )]
z_index = 100
script = ExtResource( 9 )
